webroot/css/style.less
body {
    > div.container {
        margin-top: 30px;
    }
}

section.home {
    border-bottom: 1px solid #aaa;
    margin-bottom: 50px;
    padding-bottom: 50px;

    &:last-child {
        border-bottom: none;
        margin-bottom: 0;
        padding-bottom: 0;
    }
}

